--- a/demo_spring/src/main/resources/application.properties
+++ b/demo_spring/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.h2.console.enabled=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
