--- a/demo_spring/src/main/resources/application.properties
+++ b/demo_spring/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=demo_spring
 spring.h2.console.enabled=true
+
+# C?u hình H2 s? d?ng file thay vì memory
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:file:./data/testdb;AUTO_SERVER=TRUE
 spring.datasource.username=admin
 spring.datasource.password=
+
+# Hibernate c?u hình
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
