implement spring security

--- a/demo_spring/src/main/resources/application.properties
+++ b/demo_spring/src/main/resources/application.properties
@@ -1,13 +1,24 @@
+# Tên ?ng d?ng
 spring.application.name=demo_spring
-spring.h2.console.enabled=true
 
-# C?u hình H2 s? d?ng file thay vì memory
+# B?t giao di?n qu?n lý H2 Database (truy c?p: http://localhost:8080/h2-console)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# C?u hình H2 Database (l?u d? li?u vào file thay vì memory)
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./data/testdb;AUTO_SERVER=TRUE
-spring.datasource.username=admin
+spring.datasource.url=jdbc:h2:file:./data/demo_spring_db;AUTO_SERVER=TRUE
+spring.datasource.username=sa
 spring.datasource.password=
 
-# Hibernate c?u hình
+# C?u hình Hibernate (ORM - Object Relational Mapping)
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
+
+# ??m b?o Hibernate không t? ??ng xóa d? li?u c? khi c?p nh?t b?ng
+spring.sql.init.mode=always
+
+# Logging SQL ?? ki?m tra truy v?n
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
